# firecracker

./: .gitignore  CHANGELOG.md  CHARTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml
.buildkite/: common.py  pipeline_pr.py
.github/workflows/: send_pr_notification.yml  send_release_notification.yml
api_server/: Cargo.toml
api_server/src/: http_service.rs  lib.rs
api_server/src/request/: actions.rs  balloon.rs  machine_configuration.rs  mod.rs  snapshot.rs
api_server/swagger/: firecracker.yaml
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/aarch64/: fdt.rs  gic.rs  mod.rs  regs.rs
arch/src/x86_64/: interrupts.rs  mod.rs  mptable.rs  msr.rs  regs.rs
cpuid/: Cargo.toml
cpuid/src/: lib.rs
cpuid/src/template/: c3.rs  t2.rs
cpuid/src/transformer/: amd.rs  common.rs  mod.rs
devices/: Cargo.toml
devices/src/: lib.rs
devices/src/legacy/: serial.rs
devices/src/virtio/: balloon.rs  block.rs  mmio.rs  mod.rs  net.rs  queue.rs
docs/: ballooning.md
docs/api_requests/: actions.md  snapshot.md
docs/snapshotting/: cloning.md  demo.md  network-for-clones.md  random-for-clones.md  snapshot.md
jailer/: Cargo.toml
kernel/src/loader/: mod.rs
kvm/: Cargo.toml
kvm/src/: cap.rs  device.rs  ioctl_defs.rs  kvm_vec.rs  lib.rs
logger/: Cargo.toml
logger/src/: lib.rs  metrics.rs
memory_model/src/: guest_address.rs  guest_memory.rs  lib.rs  mmap.rs
net_util/src/: tap.rs
rate_limiter/: Cargo.toml
rate_limiter/src/: lib.rs
seccomp/src/: lib.rs
src/: main.rs
src/api_server/: Cargo.toml
src/api_server/src/: lib.rs  parsed_request.rs
src/api_server/swagger/: firecracker.yaml
src/firecracker/: Cargo.toml
src/firecracker/examples/uffd_handler/: main.rs  uffd_handler.rs
src/firecracker/src/: api_server_adapter.rs  main.rs
src/polly/src/: event_manager.rs
src/rpc_interface/: Cargo.toml
src/rpc_interface/src/: boot_source.rs  controllers.rs  drive.rs  lib.rs  logger.rs  machine_config.rs  rate_limiter.rs  resources.rs  vsock.rs
src/uffd-daemon/: Cargo.toml
src/uffd-daemon/src/: main.rs
src/utils/src/: lib.rs
src/vmm/benches/: main.rs
src/vmm/src/: builder.rs  lib.rs  memory_snapshot.rs  persist.rs  resources.rs  rpc_interface.rs  signal_handler.rs  vstate.rs
src/vmm/tests/: integration_tests.rs
sys_util/src/: signal.rs
tests/: conftest.py
tests/framework/: jailer.py  microvm.py  resources.py
tests/host_tools/: network.py
tests/integration_tests/functional/: test_api.py  test_balloon.py  test_logging.py  test_pause_resume.py  test_rate_limiter.py  test_snapshot.py
tests/integration_tests/performance/: test_boottime.py
tests/integration_tests/security/: test_seccomp.py
tools/: devtool
tools/devctr/: Dockerfile.x86_64
tools/measure_i8042_boot_time_impact/: data_aggregator.py  data_analyzer.py  i8042_boot_time_gathering_data.sh  i8042_boot_time_processing_data.sh
vmm/: Cargo.toml
vmm/src/: lib.rs  serialize.rs  snapshot.rs  vstate.rs
vmm/src/default_syscalls/: filters.rs  mod.rs  x86_64.rs
vmm/src/device_manager/: mmio.rs
vmm/src/translator/: identity_snapshot_translator.rs  mod.rs
(+48 files in other folders)
