[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
byteorder = ">=1.2.1"
kvm-bindings = { git = "https://github.com/aghecenco/kvm-bindings", branch = "serde_dev" }
libc = ">=0.2.39"

arch_gen = { path = "../arch_gen" }
kvm = { path = "../kvm" }
memory_model = { path = "../memory_model" }

[dev-dependencies]
fc_util = { path = "../fc_util" }
device_tree = ">=1.1.0"
