[package]
name = "kvm"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
kvm-bindings = { git = "https://github.com/aghecenco/kvm-bindings", branch = "serde_dev" }
libc = ">=0.2.39"
serde = ">=1.0.27"

sys_util = { path = "../sys_util" }

[dev-dependencies]
byteorder = ">=1.2.1"
serde_derive = ">=1.0.27"
serde_json = ">=1.0.9"
