[package]
name = "firecracker"
version = "0.26.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2018"
build = "../../build.rs"
description = "Firecracker enables you to deploy workloads in lightweight virtual machines, called microVMs, which provide enhanced security and workload isolation over traditional VMs, while enabling the speed and resource efficiency of containers."
homepage = "https://firecracker-microvm.github.io/"
license = "Apache-2.0"

[dependencies]
event-manager = ">=0.2.1"
libc = ">=0.2.39"
timerfd = ">=1.0"

api_server = { path = "../api_server" }
logger = { path = "../logger" }
mmds = { path = "../mmds" }
seccompiler = { path = "../seccompiler" }
snapshot = { path = "../snapshot"}
utils = { path = "../utils" }
vmm = { path = "../vmm" }

[dev-dependencies]
nix = "0.23.0"
regex = ">=1.0.0"
serde = { version = ">=1.0.27", features = ["derive"] }
serde_json = ">=1.0.9"
userfaultfd = ">=0.4.0"
micro_http = { git = "https://github.com/firecracker-microvm/micro-http", rev = "36e59a0" }
